--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,18 @@
-*{
+* {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
-  
+}
+
 body {
-    
     background-color: rgb(237, 244, 237); 
 }
+.navbar-logo {
+    height: 60px; /* Ajusta la altura del logo según tus necesidades */
+    width: auto; /* Mantiene la proporción original del logo */
+    max-height: 100%; /* Asegura que el logo no se desborde fuera del contenedor */
+}
+
 
 .principal {
     position: relative;
@@ -28,25 +33,29 @@ body {
     z-index: -1; /* Coloca el video detrás del texto */
 }
 
+.principal {
+    position: relative; /* Necesario para posicionar el logo de manera absoluta */
+}
+
+.logo-container {
+    position: absolute;
+    top: 20px; /* Ajusta el espacio desde la parte superior según sea necesario */
+    right: 20px; /* Ajusta el espacio desde el borde izquierdo según sea necesario */
+    z-index: 10; /* Asegura que el logo esté sobre otros elementos */
+}
+
+.logo-image {
+    height: 80px; /* Ajusta la altura del logo según tus necesidades */
+    width: auto; /* Mantiene la proporción original del logo */
+}
+
 .principal iframe {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.principal h1, .principal h2 {
-    position: relative;
-    text-align: center;
-    color: #0d7c3d;
-}
 
-.principal h1 {
-    font-size: 60px;
-}
-
-.principal h2 {
-    font-size: 40px;
-}
 .direccion {
     display: flex;
     justify-content: center;
@@ -57,20 +66,19 @@ body {
 
 .direccion a {
     text-decoration: none; /* Elimina el subrayado de los enlaces */
-    color:#7fc89f; /* Mantiene el color del texto del h2 */
+    color: #7fc89f; /* Mantiene el color del texto del h2 */
 }
 
 .direccion h2 {
     margin: 0; /* Elimina los márgenes predeterminados de h2 */
 }
-.card-img-top {
-    width: 80%; /* Hace que la imagen sea un 20% más pequeña */
-    height: auto; /* Mantiene la proporción original de la imagen */
-    display: block; /* Asegura que la imagen se muestre como un bloque */
-    margin: 0 auto; /* Centra la imagen horizontalmente */
-}
+
 .card {
-    position: relative; /* Necesario para la posición absoluta del contenido adicional */
+    position: relative;
+    overflow: hidden; /* Oculta cualquier contenido que sobresalga del contenedor */
+    border: none; /* Elimina el borde de la card */
+    width: 80%; /* Reduce el tamaño de la card al 80% */
+    margin: 0 auto; /* Centra la card en su contenedor */
 }
 
 .card-link {
@@ -79,8 +87,9 @@ body {
 }
 
 .card-img-top {
-    width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
+    width: 100%; /* Hace que la imagen ocupe el 100% del ancho de la card */
     height: auto; /* Mantiene la proporción original de la imagen */
+    display: block; /* Asegura que la imagen se muestre como un bloque */
 }
 
 .card-info {
@@ -104,6 +113,8 @@ body {
 .card-link:hover .card-info {
     opacity: 1; /* Muestra la información al pasar el ratón */
 }
+
+
 
 .card-info .btn {
     margin-top: 10px;
