--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     font-style: normal;
 }
 body {
-    background-color: rgb(237, 244, 237);
+    background-color: white;
     padding-top: 70px;
 }
 
@@ -31,7 +31,7 @@ body {
     height: 70vh;
     margin: 0;
     padding: 0;
-    color: #0d7c3d; 
+    color: white; 
 }
 
 .video-container {
@@ -78,88 +78,76 @@ body {
 
 .direccion a {
     text-decoration: none; /* Elimina el subrayado de los enlaces */
-    color: #7fc89f; /* Mantiene el color del texto del h2 */
+    color: #C4DAD2; /* Color de los enlaces no activos */
+    font-size: larger;
+}
+
+.direccion a.active {
+    color: #006400; /* Verde oscuro para el enlace activo */
 }
 
 .direccion h2 {
     margin: 0; /* Elimina los márgenes predeterminados de h2 */
 }
 
+/* Efecto de hover para las tarjetas */
 .card {
-    position: relative;
-    overflow: hidden; /* Oculta cualquier contenido que sobresalga del contenedor */
-    border: none; /* Elimina el borde de la card */
-    width: 80%; /* Reduce el tamaño de la card al 80% */
-    margin: 0 auto; /* Centra la card en su contenedor */
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    overflow: hidden; /* Asegura que el contenido no se desborde */
+    border: 1px solid black; /* Agrega un borde negro de 1px */
+    border-radius: 5px; /* Agrega bordes redondeados, opcional */
+    width: 100%; /* Hace que la tarjeta ocupe el 100% del ancho de su contenedor */
+    max-width: 300px; /* Ajusta el ancho máximo de la tarjeta */
+    margin: 0 auto; /* Centra la tarjeta en su contenedor */
 }
 
+/* Efecto de hover para agrandar y opacar la tarjeta */
+.card:hover {
+    transform: scale(1.05); /* Agranda la tarjeta */
+    opacity: 0.8; /* Hace que la tarjeta sea un poco opaca */
+}
+
+/* Efecto de hover para mostrar el título y la información */
 .card-link {
-    display: block;
     position: relative;
-}
-
-.card-img-top {
-    width: 100%; /* Hace que la imagen ocupe el 100% del ancho de la card */
-    height: auto; /* Mantiene la proporción original de la imagen */
-    display: block; /* Asegura que la imagen se muestre como un bloque */
+    display: block;
+    height: 100%; /* Asegura que el enlace ocupe toda la tarjeta */
 }
 
 .card-info {
+    opacity: 0; /* Inicialmente oculto */
+    transition: opacity 0.3s ease-in-out;
     position: absolute;
-    top: 0;
+    bottom: 0; /* Alinea la información al fondo de la tarjeta */
     left: 0;
     width: 100%;
-    height: 100%;
     background: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
     color: white;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
     padding: 20px;
     text-align: center;
 }
 
+/* Muestra la información al pasar el ratón */
 .card-link:hover .card-info {
     opacity: 1; /* Muestra la información al pasar el ratón */
 }
 
-
-
-.card-info .btn {
-    margin-top: 10px;
-}
-/* estilo de las paginas secundarias*/
-
-.titulo-imagen-container {
-    display: flex;
-    align-items: flex-start;
-    gap: 20px; /* Espacio entre la imagen principal, el título y la imagen terciaria */
-    margin-top: 20px; /* Ajusta el margen superior */
+.card-info h5 {
+    margin: 0;
+    font-size: 1.25rem; /* Ajusta el tamaño del título según sea necesario */
 }
 
-.titulo {
-    flex: 1;
-    color: #7fc89f; /* Mantiene el color del texto */
+/* Ajustes adicionales para la imagen de la tarjeta */
+.card-img-top {
+    width: 100%; /* Hace que la imagen ocupe el 100% del ancho de la tarjeta */
+    height: auto; /* Mantiene la proporción original de la imagen */
+    display: block; /* Asegura que la imagen se muestre como un bloque */
 }
 
-.imagenPrincipal,
-.imagenTerciaria {
-    flex: 1;
-    max-width: 300px; /* Ajusta el tamaño máximo de las imágenes */
-}
 
-.imagenSecundaria {
-    margin-top: 20px;
-    display: block;
-    max-width: 100%;
-    margin-bottom: 20px; /* Espacio adicional debajo de la imagen secundaria */
-}
 
-.descripcion {
-    margin-top: 20px;
-    color: #7fc89f; /* Mantiene el color del texto */
-}
+
 
