--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,8 @@
-* {
+
+body {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
-}
-body {
     background-color: white;
     padding-top: 70px;
 }
@@ -66,7 +65,16 @@ body {
     height: 100%;
     object-fit: cover;
 }
-
+.section-label {
+    position: absolute;
+    bottom: 20px; /* Ajusta la distancia desde la parte inferior */
+    left: 20px; /* Ajusta la distancia desde el borde izquierdo */
+    font-size: 5rem; /* Tamaño del texto, puedes ajustarlo */
+    color: white; /* Color del texto */
+    font-family: "Great Vibes", cursive; /* Aplica la fuente */
+    z-index: 10; /* Asegura que el texto esté sobre el video */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Agrega una sombra para mejorar la visibilidad */
+}
 
 .direccion {
     display: flex;
