--- a/css/stylesindividuales.css
+++ b/css/stylesindividuales.css
@@ -1,17 +1,52 @@
+/* Contenedor principal para imágenes y texto */
 .contenedorPrincipal {
     display: flex;
-    align-items: center; /* Alinea verticalmente la imagen y el título */
-    justify-content: flex-start; /* Alinea los elementos a la izquierda */
+    flex-direction: column; /* Alinea elementos verticalmente */
+    align-items: center; /* Centra todo horizontalmente */
 }
 
 .imagenPrincipal img {
     margin-top: 60px;
-    max-width: 100%; /* Asegura que la imagen no se extienda más allá del contenedor */
-    height: auto; /* Mantiene las proporciones de la imagen */
+    margin-left: 80px;
+    max-width: 150%;
+    height: auto;
 }
 
-.titulo h1 {
-    margin-left: 20px; /* Ajusta el espacio entre la imagen y el título */
-    font-size: 6rem; /* Ajusta el tamaño de la fuente del título según tu diseño */
-    color: #006400;
+.imagenSecundaria img {
+    margin-top: 100px;
+    max-width: 70%;
+    height: auto;
 }
+
+/* Título y texto */
+.titulo-principal {
+    font-size: 2.5rem;
+    font-family: 'Bebas Neue', sans-serif;
+    color:#006400;
+    margin-top: 20px; /* Separación entre la imagen secundaria y el título */
+}
+
+.contenedor-texto {
+    display: flex;
+    flex-direction: column; /* Alinea el texto en columna */
+    align-items: flex-start; /* Alinea el texto de izquierda a derecha */
+    justify-content: center; /* Centra verticalmente */
+    width: 60%; /* Ajusta el ancho del contenedor */
+    margin: 0 auto; /* Centra el contenedor */
+    margin-top: 10px; /* Espacio entre el título y el texto */
+}
+
+.texto-titulo {
+    font-size: 1.2rem;
+    font-family: Arial, sans-serif;
+    line-height: 1.5;
+    color:gray;
+}
+
+.texto-titulo strong {
+    font-weight: bold; /* Negrita para el texto después de los dos puntos */
+}
+
+
+
+
