--- a/css/styles.css
+++ b/css/styles.css
@@ -67,11 +67,12 @@ body {
 }
 .section-label {
     position: absolute;
-    bottom: 20px; /* Ajusta la distancia desde la parte inferior */
+    bottom: 40px; /* Ajusta la distancia desde la parte inferior */
     left: 20px; /* Ajusta la distancia desde el borde izquierdo */
     font-size: 5rem; /* Tamaño del texto, puedes ajustarlo */
+    line-height: 1;
     color: white; /* Color del texto */
-    font-family: "Great Vibes", cursive; /* Aplica la fuente */
+    font-family: "Bebas Neue", sans-serif; /* Aplica la fuente */
     z-index: 10; /* Asegura que el texto esté sobre el video */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Agrega una sombra para mejorar la visibilidad */
 }
