--- a/css/plantillasindividuales.css
+++ b/css/plantillasindividuales.css
@@ -171,8 +171,6 @@
 }
 
 .flex-container-footer{
-    border: 1px solid black;
-    background-color: brown;
     padding: 20px;
     display: flex;
     flex-direction: column; /* Alinea las sub-cajas verticalmente */
@@ -182,9 +180,8 @@
     height: auto; /* Ajusta según tus necesidades */
     gap: 10px; /* Espacio entre las cajas principales */
 }
-.caja1-footer, .caja2-footer{
-    border: 3px solid black;
-    background-color: aqua;
+.caja1-footer, .caja2-footer, .caja3-footer{
+   
     width: 50%; /* Ajusta según el tamaño deseado */
     height: auto;
     display: flex;
@@ -203,6 +200,18 @@
     height: auto;
 }
 .caja2-footer{
-    width: 20%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    font-family: "Bebas Neue", sans-serif;
+    color:gray;
+    font-size: 1.2rem;
+}
+.caja3-footer{
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    width: 100%;
     height: auto;
 }
