--- a/css/plantillasindividuales.css
+++ b/css/plantillasindividuales.css
@@ -170,6 +170,49 @@
     grid-column: 3; /* Ubica este texto en la tercera columna */
 }
 
+
+.flex-container-trailer{
+
+    border: 1px solid black;
+    background-color: brown;
+    padding: 20px;
+    display: flex;
+    flex-wrap: nowrap; /* Asegura que las cajas principales no se envuelvan */
+    overflow-x: auto; /* Permite el desplazamiento horizontal si es necesario */
+    width: 100%;
+    height: 700px; /* Ajusta según tus necesidades */
+    gap: 10px; /* Espacio entre las cajas principales */
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.caja1-trailer{
+    margin-top: 40px;
+    border: 1px solid black;
+    background-color: aqua;
+    width: 50%;
+    height: auto;
+}
+.caja2-trailer{
+    margin-top: 20px;
+    border: 1px solid black;
+    background-color: aqua;
+    width: 20%;
+    height: auto;
+}
+
+.caja2-trailer img{
+    width: 100%;
+    height: auto;
+}
+
+
+
+
+
+
+
 .flex-container-footer{
     padding: 20px;
     display: flex;
