--- a/css/stylesindividuales.css
+++ b/css/stylesindividuales.css
@@ -109,7 +109,7 @@
     font-weight: bold; /* Ajusta el grosor del texto */
     font-family: 'Captain America';
     color: #4f836f;
-    font-size: 4rem; /* El título principal, más grande */
+    font-size: 3.5rem; /* El título principal, más grande */
     text-align: left;   /* Alineado a la izquierda */
     line-height: 1;   /* Espacio entre líneas */
     margin-bottom: 15px; /* Espacio inferior para separar el título del subtítulo */
@@ -119,7 +119,7 @@
     font-weight: bold; /* Ajusta el grosor del texto */
     font-family: 'Captain America';
     color: #4f836f;
-    font-size: 2.5rem;  /* Tamaño para el subtítulo "SINOPSIS" */
+    font-size: 2.3rem;  /* Tamaño para el subtítulo "SINOPSIS" */
     text-align: left;   /* Alinea el subtítulo a la izquierda */
     line-height: 1.5;   /* Espacio entre líneas */
     margin-bottom: 10px; /* Espacio inferior para separar del texto */
@@ -203,6 +203,29 @@
 .caja2-trailer img{
     width: 100%;
     height: auto;
+}
+.caja1-trailer-vacio{
+    background-color: #31836c;
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1.5; 
+}
+
+.caja1-trailer-vacio h3{
+    margin-top: 200px;
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+
+}
+.caja1-trailer-vacio h2{
+    color: white;
+    font-family: 'Captain America'; 
+    font-size: 1.7rem;
+
 }
 
 
