--- a/css/plantillasindividuales.css
+++ b/css/plantillasindividuales.css
@@ -243,6 +243,54 @@
     font-size: 1.7rem;
 
 }
+.prensa{
+    margin-top: 100px;
+    margin-right: 18%;
+    font-family: 'Captain America';
+    color: #4f836f;
+}
+
+.caja1-prensa{
+    background-color: blue;
+    border: 1px solid black;
+    width: 100%;
+    height: 300px;
+    padding-right: 10%;
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 10px;
+
+}
+.subcaja-prensa {
+    margin-top: 50px;
+    padding: 5px;
+    background-color: aqua;
+    border: 1px solid black;
+    overflow: hidden;
+    width: 150px;
+    height: 150px;
+    transition: all 0.3s ease; /* Transición suave */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra sutil */
+}
+.caja1-prensa img{
+    width: 100%;
+    height: auto;
+}
+
+.subcaja-prensa:hover {
+    background-color: #4f836f;
+    width: 300px;
+    height: 300px;
+    transform: scale(1.05); /* Un pequeño zoom */
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
+}
+
+.subcaja-prensa:hover img{
+    width: 100%;
+    height: auto;
+   
+}
+
 
 
 
