--- a/css/stylesindividuales.css
+++ b/css/stylesindividuales.css
@@ -106,7 +106,7 @@
 
 
  .titulo{
-    font-weight: bold; /* Ajusta el grosor del texto */
+    
     font-family: 'Captain America';
     color: #4f836f;
     font-size: 3.5rem; /* El título principal, más grande */
@@ -116,7 +116,7 @@
 }
 
 .subtitulo {
-    font-weight: bold; /* Ajusta el grosor del texto */
+    
     font-family: 'Captain America';
     color: #4f836f;
     font-size: 2.3rem;  /* Tamaño para el subtítulo "SINOPSIS" */
@@ -152,7 +152,6 @@
 
 .subtitulo2 {
     grid-column: 1 / span 2; /* El subtítulo ocupará las dos columnas */
-    font-weight: bold; /* Ajusta el grosor del texto */
     font-family: 'Captain America';
     color: #4f836f;
     font-size: 2.5rem;  /* Tamaño para el subtítulo "SINOPSIS" */
@@ -207,7 +206,7 @@
 .caja1-trailer-vacio{
     background-color: #31836c;
     width: 100%;
-    height: 70%;
+    height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -227,5 +226,50 @@
     font-size: 1.7rem;
 
 }
+.prensa{
+    margin-top: 100px;
+    margin-right: 18%;
+    font-family: 'Captain America';
+    color: #4f836f;
+}
+
+.caja1-prensa{
+    width: 100%;
+    height: 300px;
+    padding-right: 10%;
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 10px;
+
+}
+.subcaja-prensa {
+    margin-top: 50px;
+    padding: 5px;
+    background-color: #4f836f;
+    overflow: hidden;
+    width: 150px;
+    height: 150px;
+    transition: all 0.3s ease; /* Transición suave */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra sutil */
+}
+.caja1-prensa img{
+    width: 100%;
+    height: auto;
+}
+
+.subcaja-prensa:hover {
+    background-color: #4f836f;
+    width: 300px;
+    height: 300px;
+    transform: scale(1.05); /* Un pequeño zoom */
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
+}
+
+.subcaja-prensa:hover img{
+    width: 100%;
+    height: auto;
+   
+}
+
 
 
