--- a/css/plantillasindividuales.css
+++ b/css/plantillasindividuales.css
@@ -243,6 +243,21 @@
     font-size: 1.7rem;
 
 }
+.flex-container-prensa{
+
+    border: 1px solid black;
+    background-color: red;
+    /* padding: 20px; */
+    display: flex;
+    flex-wrap: nowrap; /* Asegura que las cajas principales no se envuelvan */
+    overflow-x: auto; /* Permite el desplazamiento horizontal si es necesario */
+    width: 100%;
+    height: 850px; /* Ajusta según tus necesidades */
+    gap: 10px; /* Espacio entre las cajas principales */
+    flex-direction: column;
+    align-items: center;
+
+}
 .prensa{
     margin-top: 100px;
     margin-right: 18%;
@@ -254,11 +269,20 @@
     background-color: blue;
     border: 1px solid black;
     width: 100%;
-    height: 300px;
+    height: 420px;
     padding-right: 10%;
     display: flex;
     flex-direction: row-reverse;
     gap: 10px;
+
+}
+.caja2-prensa{
+    background-color: rgb(255, 0, 183);
+    border: 1px solid black;
+    padding: 10px;
+    margin-top: 20px;
+    width: 40%;
+    height: auto;
 
 }
 .subcaja-prensa {
@@ -276,11 +300,15 @@
     width: 100%;
     height: auto;
 }
+.caja2-prensa img{
+    width: 100%;
+    height: auto;
+}
 
 .subcaja-prensa:hover {
     background-color: #4f836f;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     transform: scale(1.05); /* Un pequeño zoom */
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
 }
