--- a/css/plantillasindividuales.css
+++ b/css/plantillasindividuales.css
@@ -396,6 +396,19 @@
     font-family: 'Captain America'; 
     font-size: 1.7rem;
 }
+.flex-container-contacto{
+    border: 1px solid black;
+    background-color: gray;
+    padding-top: 100px;
+    display: flex;
+    flex-wrap: nowrap; /* Asegura que las cajas principales no se envuelvan */
+    overflow-x: auto; /* Permite el desplazamiento horizontal si es necesario */
+    width: 100%;
+    height: 500px; /* Ajusta según tus necesidades */
+    gap: 10px; /* Espacio entre las cajas principales */
+    flex-direction: column;
+    align-items: center;
 
+}
 
 
