--- a/css/stylesindividuales.css
+++ b/css/stylesindividuales.css
@@ -359,5 +359,23 @@
     font-family: 'Captain America'; 
     font-size: 1.7rem;
 }
+.encabezado{
+   
+    display: flex;
+    width: 100%;
+    height: 200px; /* Ajusta según tus necesidades */
+    flex-direction: column;
+    align-items: center;
+}
+
+.caja-encabezado{
+    
+    width: 12%;
+    height: auto;
+}
+.caja-encabezado img{
+    width: 100%;
+    height: auto;
+}
 
 
