--- a/css/plantillasindividuales.css
+++ b/css/plantillasindividuales.css
@@ -429,8 +429,6 @@
     height: auto;
 }
 .flex-container-slaider {
-    background-color: red;
-    border: 1px solid black;
     width: 100%;
     height: 300px;
     display: flex;
@@ -447,21 +445,26 @@
 }
 
 .caja-slaider {
-    background-color: aqua;
-    border: 1px solid black;
     padding: 5px;
     width: 150px;
     height: 200px;
     transition: transform 0.3s; /* Transición suave al hacer hover */
 }
-.caja-slaider img{
+
+.caja-slaider img {
     width: 100%;
     height: 100%;
+    filter: grayscale(100%); /* Aplica el filtro en blanco y negro */
+    transition: filter 0.3s; /* Transición suave del filtro */
 }
 
-/* Agrandar la caja cuando se hace hover */
+/* Agrandar la caja y poner en color cuando se hace hover */
 .caja-slaider:hover {
     transform: scale(1.2);
+}
+
+.caja-slaider:hover img {
+    filter: grayscale(0%); /* Quita el filtro en hover */
 }
 
 /* Pausar el slider al hacer hover */
@@ -478,6 +481,30 @@
         transform: translateX(-50%); /* Mueve las cajas a la izquierda */
     }
 }
+.descripcion {
+    text-align: center; /* Centra el contenido horizontalmente */
+    margin: 0 auto; /* Centra el contenedor si tiene un ancho definido */
+    width: 80%; /* Ajusta el ancho del contenedor para que no ocupe todo el ancho */
+}
+
+.descripcion h1 {
+    font-family: 'Bernett';
+    color: #4f836f;
+    font-size: 80px; /* Tamaño del h1 */
+    margin-bottom: 20px; /* Espacio entre el h1 y el párrafo */
+    line-height: 1.3; /* Ajusta el interlineado del h1 */
+}
+
+.descripcion p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: gray;
+    font-size: 18px; /* Tamaño del párrafo */
+    line-height: 1.8; /* Interlineado del párrafo */
+    max-width: 800px; /* Ancho máximo para el texto */
+    margin: 0 auto; /* Centra el párrafo */
+}
+
+
 
 
 
