--- a/css/stylesindividuales.css
+++ b/css/stylesindividuales.css
@@ -377,49 +377,55 @@
     width: 100%;
     height: auto;
 }
+.flex-container-slaider {
+
+    overflow: hidden; /* Oculta cualquier desbordamiento, evitando la barra de desplazamiento */
+}
+
 .flex-container-slaider .inner-slider {
     display: flex;
-    animation: moveSlider 20s linear infinite; /* Mueve el contenedor de manera continua */
-    width: calc(200px * 28); /* El ancho total del contenedor debe ser el ancho de todas las cajas */
+    animation: moveSlider 20s linear infinite;
+    width: calc(150px * 28); /* Ajustar al tamaño correcto de las imágenes */
+    height: 300px;
 }
 
 .caja-slaider {
+    margin-top: 20px;
     padding: 5px;
     width: 150px;
     height: 200px;
-    transition: transform 0.3s; /* Transición suave al hacer hover */
+    transition: transform 0.3s;
+    flex-shrink: 0; /* Evita que las cajas se reduzcan cuando la ventana se achica */
 }
 
 .caja-slaider img {
     width: 100%;
     height: 100%;
-    filter: grayscale(100%); /* Aplica el filtro en blanco y negro */
-    transition: filter 0.3s; /* Transición suave del filtro */
+    filter: grayscale(100%);
+    transition: filter 0.3s;
 }
 
-/* Agrandar la caja y poner en color cuando se hace hover */
 .caja-slaider:hover {
     transform: scale(1.2);
 }
 
 .caja-slaider:hover img {
-    filter: grayscale(0%); /* Quita el filtro en hover */
+    filter: grayscale(0%);
 }
 
-/* Pausar el slider al hacer hover */
 .flex-container-slaider:hover .inner-slider {
     animation-play-state: paused;
 }
 
-/* Animación continua */
 @keyframes moveSlider {
     0% {
         transform: translateX(0);
     }
     100% {
-        transform: translateX(-50%); /* Mueve las cajas a la izquierda */
+        transform: translateX(-50%);
     }
 }
+
 .descripcion {
     text-align: center; /* Centra el contenido horizontalmente */
     margin: 0 auto; /* Centra el contenedor si tiene un ancho definido */
