--- a/css/plantillasindividuales.css
+++ b/css/plantillasindividuales.css
@@ -365,37 +365,74 @@
     width: 100%;
     height: auto;
 }
-
 .flex-container-talleres{
-    border: 1px solid black;
-    background-color: red;
-    padding-top: 100px;
-
+    
     display: flex;
     flex-wrap: nowrap; /* Asegura que las cajas principales no se envuelvan */
     overflow-x: auto; /* Permite el desplazamiento horizontal si es necesario */
     width: 100%;
-    height: 300px; /* Ajusta según tus necesidades */
-    gap: 10px; /* Espacio entre las cajas principales */
-    flex-direction: column;
+    height: auto; /* Ajusta según tus necesidades */
+    gap: 20px; /* Espacio entre las cajas principales */
+    flex-direction: row;
     align-items: center;
 
 }
-.caja-talleres{
+
+.caja-talleres1, .caja-talleres2 {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: auto;
+}
+
+.caja-talleres1 {
+    align-items: flex-end; /* Alinea los elementos hacia el margen derecho */
+}
+
+.caja-talleres2 {
+    align-items: flex-start; /* Alinea los elementos hacia el margen izquierdo */
+}
+
+/* Ajustes en las subcajas para que se mantengan dentro de los márgenes deseados */
+.subcaja1-talleres, .subcaja3-talleres {
+    margin-top: 5%;
+    width: 350px;
+    height: 400px; /* O el tamaño necesario */
     
-    background-color: beige;
-    border: 1px solid black;
-    width: 60%;
-    height: 45px;
-    gap: 10px;
+    
+}
+
+.subcaja2-talleres, .subcaja4-talleres {
+    display: flex;
     align-items: flex-start;
+    margin-top: 10px;
+    padding: 3px;
+    background-color:rgb(33, 135, 111);
+    width: 350px;
+    height: 40px; /* Ajuste para las subcajas más pequeñas */
 }
-.caja-talleres h1{
-    margin-top: 5px;
-    color: black;
-    font-family: 'Captain America'; 
-    font-size: 1.7rem;
+
+/* Asegúrate que las imágenes ocupen todo el espacio de las subcajas */
+.subcaja1-talleres img, .subcaja3-talleres img {
+    width: 100%;
+    height: 100%;
 }
+ 
+.subcaja2-talleres h1, .subcaja4-talleres h1 {
+    font-family: 'Captain America';
+    font-size: 1.5em; /* Ajusta el tamaño del texto */
+    width: 80%; /* El texto ocupa el 70% de la subcaja */
+    white-space: nowrap; /* Evita que el texto se desborde y se vaya de los márgenes */
+    overflow: hidden; /* Esconde cualquier parte del texto que exceda el área visible */
+    margin: 0; /* Elimina márgenes adicionales */
+    color: white; /* Color del texto, puedes ajustarlo si es necesario */
+}
+
+
+
+
+
+
 .encabezado{
    
     display: flex;
@@ -559,6 +596,86 @@ button[type="submit"]:hover {
     background-color: #4f836f;
 }
 
+.flex-container-taller{
+
+    margin: 10%; 
+    margin-top: 5%; 
+      
+    background-color: aqua;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: nowrap; /* Asegura que las cajas principales no se envuelvan */
+    overflow-x: auto; /* Permite el desplazamiento horizontal si es necesario */
+    width: 80%;
+    height: auto; /* Ajusta según tus necesidades */
+    gap: 20px; /* Espacio entre las cajas principales */
+    flex-direction: column;
+    align-items: center;
+
+}
+.boxtaller1, .boxtaller2{
+    display: flex;
+    align-items: flex-start;
+    padding: 5px;
+    width: 80%;
+    height: auto;
+    background-color: red;
+    border: 1px solid black;
+
+}
+.boxtaller3{
+    display: flex;
+    width: 80%;
+    height: 400px;
+    background-color: red;
+    border: 1px solid black;
+    flex-direction: row;
+}
+.boxtaller4{
+    width: 80%;
+    height: 400px;
+    background-color: red;
+    border: 1px solid black;
+}
+.boxtaller5{
+    width: 80%;
+    height: 400px;
+    background-color: red;
+    border: 1px solid black;
+}
+.boxtaller6{
+    width: 80%;
+    height: 400px;
+    background-color: red;
+    border: 1px solid black;
+}
+.boxtaller1 h1, .boxtaller2 h1{
+    font-family: 'Captain America';
+    font-size: 200%; /* Ajusta el tamaño del texto */
+    width: 100%; /* El texto ocupa el 70% de la subcaja */
+    
+    margin: 0; /* Elimina márgenes adicionales */
+    color: white; /* Color del texto, puedes ajustarlo si es necesario */
+}
+a {
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit; /* Opcional: mantiene el color del texto del contenedor */
+}
+
+.subbox1{
+    width: 60%;
+    height: auto;
+    background-color: aqua;
+    border: 1px solid black;
+
+}
+.subbox2{
+    width: 40%;
+    height: auto;
+    background-color: aqua;
+    border: 1px solid black;
+
+}
 
 
 
